--- a/syle.css
+++ b/syle.css
@@ -34,8 +34,8 @@ nav{
     flex-direction: row;  
 }
 img{
-    width: 500px;
-    height: 300;
+    width: 450px;
+    height: 300px;
 }
 .project-tile{   
     background-color: #208075;
